Fixes the bug: in the teammate drawer if the full name is too long it overlaps the email

--- a/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
+++ b/src/app/components/sidebar-user-details/sidebar-user-details.component.scss
@@ -142,13 +142,16 @@ button.user-details-btn-close {
 .user-details-email > h3 {
     font-size: 14px;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 1px;
     font-family: "Poppins";
     font-weight: 400;
-    line-height: 6px;
+    line-height: 19px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
 }
 
 .user-details-role {
